--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </nav>
     <main id="main-content">
         <div class="album-grid">
-            <img src="https://c.saavncdn.com/210/Obsidian-English-2013-500x500.jpg" alt="Bath's Album Cover">
+            <img src="https://c.saavncdn.com/210/Obsidian-English-2013-500x500.jpg" width="1000" alt="Bath's Album Cover">
             <img src="https://cdn.discordapp.com/attachments/680411038029447209/1199988932776042556/f530f2baf6a87c48ff0fd5c59042f15a.png?ex=65c48bc8&is=65b216c8&hm=fe9d819424a2b9a96778fdec2b57d0ad347daf3c87fa9869026782da9b979e84&" alt="Bath's Album Cover">
         </div>
 
