--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
     </nav>
     <main id="main-content">
         <div class="album-grid">
+            <img src="https://images.genius.com/a769512d2736d6039c4592f688f1193e.1000x1000x1.jpg" width="1000" alt="Kanye West's Heartless">
+            <img src="https://th.bing.com/th/id/OIP.jjKjhHKQF6QFGYJ-5GDw0wHaHa?rs=1&pid=ImgDetMain" width="1000" alt="Operation: Doomsday">
+            <img src="https://th.bing.com/th/id/OIP.YfjFIaZcbnA61YgPdwrGOQHaHa?rs=1&pid=ImgDetMain" width="1000" alt="Odyssey">
             <img src="https://c.saavncdn.com/210/Obsidian-English-2013-500x500.jpg" width="1000" alt="Bath's Album Cover">
+            <img src="https://th.bing.com/th/id/OIP.hqfPios72Vaxawr0nT6z3QHaHa?rs=1&pid=ImgDetMain" width="1000" alt="Winter Flower">
             <img src="https://th.bing.com/th/id/OIP.5PWU94SIExETHA1H6cuZaAAAAA?rs=1&pid=ImgDetMain" width="1000" alt="Bring Me The Horizon's Album Cover">
         </div>
 
